# resguard

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Feature-Roadmap.md  PROMPTS.md  README.md  SECURITY.md  resguard-daemon_0.5.0_amd64.deb  resguard-daemon_0.6.0_amd64.deb
.github/workflows/: apt-pages.yml  ci.yml  release-upload.yml
apt/: README.md
crates/resguard-cli/: Cargo.toml
crates/resguard-cli/src/: cli.rs  legacy.rs  lib.rs  main.rs  output.rs
crates/resguard-cli/src/commands/: apply.rs  daemon.rs  desktop.rs  doctor.rs  metrics.rs  mod.rs  monitor.rs  panic.rs  profile.rs  rescue.rs  rollback.rs  run.rs  setup.rs  status.rs  suggest.rs  top.rs  tree.rs  tui.rs  version.rs
crates/resguard-cli/src/util/: system.rs
crates/resguard-cli/tests/: load.rs  version.rs
crates/resguard-cli/tests/load/: cpu_hog.rs  fork_bomb_sim.rs  memory_hog.rs
crates/resguard-config/: Cargo.toml
crates/resguard-config/src/: lib.rs
crates/resguard-core/: Cargo.toml
crates/resguard-core/src/: daemon.rs  lib.rs  planner.rs  profile.rs  validation.rs
crates/resguard-daemon/: Cargo.toml
crates/resguard-daemon/src/: lib.rs  main.rs
crates/resguard-discovery/: Cargo.toml
crates/resguard-discovery/src/: alias.rs  desktop.rs  exec.rs  flatpak.rs  identity.rs  lib.rs  scope.rs  snap.rs  xdg.rs
crates/resguard-model/: Cargo.toml
crates/resguard-model/src/: lib.rs
crates/resguard-policy/: Cargo.toml
crates/resguard-policy/src/: autopilot.rs  autoprofile.rs  classification.rs  confidence.rs  lib.rs  rules.rs  thresholds.rs
crates/resguard-runtime/: Cargo.toml
crates/resguard-runtime/src/: adaptive.rs  cgroup.rs  executor.rs  lib.rs  meminfo.rs  planner.rs  pressure.rs  rollback.rs  snapshot.rs  systemd.rs
crates/resguard-services/: Cargo.toml
crates/resguard-services/src/: apply_service.rs  daemon_service.rs  desktop_service.rs  doctor_service.rs  lib.rs  metrics_service.rs  panic_service.rs  rescue_service.rs  run_service.rs  setup_service.rs  suggest_service.rs  top_service.rs  tree_service.rs  tui_service.rs
crates/resguard-state/: Cargo.toml
crates/resguard-state/src/: lib.rs
crates/resguard-system/: Cargo.toml
crates/resguard-system/src/: lib.rs
docs/: ARCHITECTURE_V3.md  Repo-Struktur.md  cli.md  design.md  desktop.md  install.md  issue-roadmap.md  issues-roadmap.md  profiles.md  releases.md  safety.md  threat-model.md
docs/man/: resguard.1
docs/releases/: v0.2.1-cut.md  v0.2.1.md  v0.3.0-checklist.md  v0.3.0.md  v0.4.0.md
packaging/: README.md
packaging/deb/: control  postinst  prerm
packaging/deb/core/: control  prerm
packaging/deb/daemon/: control  postinst  prerm
packaging/etc/resguard/: resguardd.yml
packaging/systemd/: resguardd.service
release-assets/: SHA256SUMS  resguard_0.4.0_amd64.deb  resguard_0.4.0_amd64_daemon.deb
scripts/: bootstrap-publishing.sh  build-deb.sh  generate-apt-repo.sh  release.sh
tests/e2e/: RUNBOOK.md  e2e_matrix.md  load_helpers.sh  run_e2e.sh  verify_desktop_wrap.sh  verify_rescue.sh
tests/e2e/results/: 2026-03-08-ubuntu24.04-first-field.md  test-log.txt
