[package]
name = "resguard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resguard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
thiserror = "2"
tempfile = "3"

resguard-core = { path = "../resguard-core" }
resguard-system = { path = "../resguard-system" }
resguard-config = { path = "../resguard-config" }
resguard-state = { path = "../resguard-state" }