[package]
name = "resguard"
version = "0.6.0"
edition = "2021"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "resguard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
thiserror = "2"
tempfile = "3"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

resguard-core = { path = "../resguard-core" }
resguard-runtime = { path = "../resguard-runtime" }
resguard-config = { path = "../resguard-config" }
resguard-state = { path = "../resguard-state" }
resguard-model = { path = "../resguard-model" }
resguard-discovery = { path = "../resguard-discovery" }
resguard-policy = { path = "../resguard-policy" }
resguard-services = { path = "../resguard-services" }
