[package]
name = "resguard-daemon"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "resguardd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

resguard-system = { path = "../resguard-system" }
