[package]
name = "resguard-services"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

resguard-config = { path = "../resguard-config" }
resguard-core = { path = "../resguard-core" }
resguard-discovery = { path = "../resguard-discovery" }
resguard-model = { path = "../resguard-model" }
resguard-policy = { path = "../resguard-policy" }
resguard-runtime = { path = "../resguard-runtime" }
resguard-state = { path = "../resguard-state" }
